feat/change store informations service and unit tests
