# src/api/in-memory/inMemoryStore.ts
@@ -5,13 +5,14 @@ import { randomUUID } from "node:crypto"
 export default class InMemoryStore implements StoreRepository {
   private stores = [] as Store[]
 
-  async create(storeOwner: string, storeName: string) {
+  async create(storeOwner: string, storeName: string, storeDescription?: string) {
     const newStore = {
       id: randomUUID(),
       name: storeName,
       storeOwner,
       createdAt: new Date(),
       updatedAt: new Date(),
+      description: storeDescription,
     }
 
     this.stores.push(newStore)
@@ -29,5 +30,41 @@ export default class InMemoryStore implements StoreRepository {
 
   async getAllStores() {
     return this.stores
+  }
+
+  async findUnique(storeId: string) {
+    const findStore = this.stores.find((store) => store.id === storeId)
+
+    if (!findStore) return null
+
+    return findStore
+  }
+
+  async update(storeUpdate: {
+    storeId: string
+    name?: string
+    description?: string
+  }) {
+    const fieldsToUpdate = Object.keys(storeUpdate)
+    let updatedStore = {} as Store
+
+    const updatedStores = this.stores.map((store) => {
+      if (store.id === storeUpdate.storeId) {
+        for (let field of fieldsToUpdate) {
+          store = {
+            ...store,
+            [field]: storeUpdate[field],
+          }
+        }
+
+        updatedStore = store
+      }
+
+      return store
+    })
+
+    this.stores = updatedStores
+
+    return updatedStore
   }
 }
