# src/api/repositories/StoreRepository.ts
@@ -1,7 +1,21 @@
 import { Store } from "../@types/types"
 
 export interface StoreRepository {
-  create(storeOwner: string, storeName: string): Promise<Store>
+  create(
+    storeOwner: string,
+    storeName: string,
+    storeDescription?: string
+  ): Promise<Store>
+
   findUserStore(storeOwner: string): Promise<Store | null>
+
   getAllStores(): Promise<Store[]>
+
+  findUnique(storeId: string): Promise<Store | null>
+
+  update(storeUpdate: {
+    storeId: string
+    name?: string
+    description?: string
+  }): Promise<Store>
 }
